# inkmate

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/crypto/: ecrecover.rs  mod.rs
contracts/: Cargo.toml
contracts/examples/: erc20_abi.rs
contracts/src/: lib.rs
contracts/src/erc20/: erc20.rs
contracts/src/examples/: erc20.rs  erc20_example.rs  mod.rs
contracts/src/mocks/: mock_erc20.rs  mod.rs
contracts/src/tokens/: erc20.rs  erc721.rs  erc721a.rs  mod.rs
contracts/src/utils/: ecrecover.rs  mod.rs
samples/: Cargo.toml
samples/src/: erc20_mock.rs  erc721_mock.rs  erc721a_mock.rs  lib.rs
src/: lib.rs
src/contracts/: mod.rs
src/contracts/erc20/: erc20.rs
src/contracts/examples/: erc20_example.rs
src/contracts/test_contracts/: erc20_mock.rs  mod.rs
src/contracts/utils/: ecrecover.rs
