[workspace]
members = ["common", "contracts"]

[workspace.dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
hex = "0.4.3"
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
