[package]
name = "inkmate"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Building block smart contracts written in Rust for Stylus"

[dependencies]
common = { path = "../common", version = "0.0.1" }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hex = { workspace = true }
mini-alloc = "0.4.2"
stylus-sdk = "0.4.3"

[lib]
crate-type = ["lib", "cdylib"]

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
erc20 = []

[[example]]
name = "erc20_abi"
path = "examples/erc20_abi.rs"
required-features = ["export-abi", "erc20"]
