[package]
name = "inkmate"
version = "0.0.3"
edition = "2021"
license = "MIT"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "inkmate"]
description = "Building block smart contracts written in Rust for Stylus"
homapage = "https://github.com/cygaar/inkmate"

[dependencies]
inkmate-common = { path = "../common", version = "0.0.1" }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hex = { workspace = true }
mini-alloc = "0.4.2"
stylus-sdk = "0.4.3"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["erc20"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
erc20 = []
mock = []

[[example]]
name = "erc20_abi"
path = "examples/erc20_abi.rs"
required-features = ["export-abi", "erc20"]
