[package]
name = "inkmate"
version = "0.0.6"
edition = "2021"
license = "MIT"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "inkmate"]
description = "Building block smart contracts written in Rust for Stylus"
homapage = "https://github.com/cygaar/inkmate"

[dependencies]
inkmate-common = { path = "../common", version = "0.0.1" }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hex = { workspace = true }
mini-alloc = { workspace = true }
stylus-sdk = { workspace = true }

[features]
default = ["erc20", "erc721"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
erc20 = []
erc721 = []
